# PongGL

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp  vertShader.glsl
Utilities/: Application.cpp  Application.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  ShaderReader.cpp
assets/shaders/: fragShader.glsl  vertShader.glsl
include/Utilities/: Application.hpp  Model.hpp  Renderer.hpp  ShaderReader.hpp
src/Utilities/: Application.cpp  Model.cpp  Renderer.cpp  ShaderReader.cpp
